gramaticLitthonParser.py
# Generated from gramaticLitthon.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticLitthonParser ( Parser ):

    grammarFileName = "gramaticLitthon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<L:O:G:L:O:G>'", "'<C:A:S:E:>'", "'<E:L:S:E>'", 
                     "'<W:H:I:L:S:T>'", "'{L:E:N:G:H:T>/'", "<INVALID>", 
                     "'<?>'", "'<{>'", "'<}>'", "'<{'", "'}>'", "'<{/'", 
                     "'<{+'", "'{+}'", "'{-}'", "'{/}'", "'{*}'", "'{^}'", 
                     "':<-:'" ]

    symbolicNames = [ "<INVALID>", "PROCEDURESREGEX", "NUMBERSREGEX", "VARREGEX", 
                      "STRINGREGEX", "SYSTEMOUTTOKEN", "CONDITIONTOKEN", 
                      "ELSECONDITIONTOKEN", "WHILETOKEN", "ARRSIZETOKEN", 
                      "BOOLTOKEN", "SYSTEMINTOKEN", "LBTOKEN", "RBTOKEN", 
                      "ARRTOKENLEFTTOKEN", "ARRTOKENRIGHTTOKEN", "ARRREMOVEDINDEXTOKEN", 
                      "ARRADDINDEXTOKEN", "PLUSTOKEN", "LESSTOKEN", "DIVISIONTOKEN", 
                      "MULTTOKEN", "POTTOKEN", "ASSIGNTOKEN", "COMPARETOKEN", 
                      "COMMENTTOKEN", "WS" ]

    RULE_root = 0
    RULE_defaultProcediments = 1
    RULE_instructions = 2
    RULE_instruction = 3
    RULE_expressions = 4
    RULE_systemIn_ = 5
    RULE_systemOut_ = 6
    RULE_array = 7
    RULE_add_ = 8
    RULE_remove_ = 9
    RULE_while_ = 10
    RULE_condition_ = 11
    RULE_assume = 12
    RULE_invoke = 13
    RULE_idVars = 14
    RULE_idExpr = 15
    RULE_sizing = 16
    RULE_find = 17

    ruleNames =  [ "root", "defaultProcediments", "instructions", "instruction", 
                   "expressions", "systemIn_", "systemOut_", "array", "add_", 
                   "remove_", "while_", "condition_", "assume", "invoke", 
                   "idVars", "idExpr", "sizing", "find" ]

    EOF = Token.EOF
    PROCEDURESREGEX=1
    NUMBERSREGEX=2
    VARREGEX=3
    STRINGREGEX=4
    SYSTEMOUTTOKEN=5
    CONDITIONTOKEN=6
    ELSECONDITIONTOKEN=7
    WHILETOKEN=8
    ARRSIZETOKEN=9
    BOOLTOKEN=10
    SYSTEMINTOKEN=11
    LBTOKEN=12
    RBTOKEN=13
    ARRTOKENLEFTTOKEN=14
    ARRTOKENRIGHTTOKEN=15
    ARRREMOVEDINDEXTOKEN=16
    ARRADDINDEXTOKEN=17
    PLUSTOKEN=18
    LESSTOKEN=19
    DIVISIONTOKEN=20
    MULTTOKEN=21
    POTTOKEN=22
    ASSIGNTOKEN=23
    COMPARETOKEN=24
    COMMENTTOKEN=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gramaticLitthonParser.EOF, 0)

        def defaultProcediments(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticLitthonParser.DefaultProcedimentsContext)
            else:
                return self.getTypedRuleContext(gramaticLitthonParser.DefaultProcedimentsContext,i)


        def getRuleIndex(self):
            return gramaticLitthonParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = gramaticLitthonParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 36
                self.defaultProcediments()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(gramaticLitthonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultProcedimentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticLitthonParser.RULE_defaultProcediments

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DefinitionProcedureContext(DefaultProcedimentsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.DefaultProcedimentsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PROCEDURESREGEX(self):
            return self.getToken(gramaticLitthonParser.PROCEDURESREGEX, 0)
        def idVars(self):
            return self.getTypedRuleContext(gramaticLitthonParser.IdVarsContext,0)

        def LBTOKEN(self):
            return self.getToken(gramaticLitthonParser.LBTOKEN, 0)
        def instructions(self):
            return self.getTypedRuleContext(gramaticLitthonParser.InstructionsContext,0)

        def RBTOKEN(self):
            return self.getToken(gramaticLitthonParser.RBTOKEN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinitionProcedure" ):
                return visitor.visitDefinitionProcedure(self)
            else:
                return visitor.visitChildren(self)



    def defaultProcediments(self):

        localctx = gramaticLitthonParser.DefaultProcedimentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_defaultProcediments)
        try:
            localctx = gramaticLitthonParser.DefinitionProcedureContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(gramaticLitthonParser.PROCEDURESREGEX)
            self.state = 45
            self.idVars()
            self.state = 46
            self.match(gramaticLitthonParser.LBTOKEN)
            self.state = 47
            self.instructions()
            self.state = 48
            self.match(gramaticLitthonParser.RBTOKEN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticLitthonParser.RULE_instructions

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class InstructsContext(InstructionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.InstructionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticLitthonParser.InstructionContext)
            else:
                return self.getTypedRuleContext(gramaticLitthonParser.InstructionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstructs" ):
                return visitor.visitInstructs(self)
            else:
                return visitor.visitChildren(self)



    def instructions(self):

        localctx = gramaticLitthonParser.InstructionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instructions)
        self._la = 0 # Token type
        try:
            localctx = gramaticLitthonParser.InstructsContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18794) != 0):
                self.state = 50
                self.instruction()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticLitthonParser.RULE_instruction

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TypeArrayContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def array(self):
            return self.getTypedRuleContext(gramaticLitthonParser.ArrayContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeArray" ):
                return visitor.visitTypeArray(self)
            else:
                return visitor.visitChildren(self)


    class AddArrayContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def add_(self):
            return self.getTypedRuleContext(gramaticLitthonParser.Add_Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddArray" ):
                return visitor.visitAddArray(self)
            else:
                return visitor.visitChildren(self)


    class SystemInConsoleContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def systemIn_(self):
            return self.getTypedRuleContext(gramaticLitthonParser.SystemIn_Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSystemInConsole" ):
                return visitor.visitSystemInConsole(self)
            else:
                return visitor.visitChildren(self)


    class SystemOutConsoleContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def systemOut_(self):
            return self.getTypedRuleContext(gramaticLitthonParser.SystemOut_Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSystemOutConsole" ):
                return visitor.visitSystemOutConsole(self)
            else:
                return visitor.visitChildren(self)


    class RemoveArrayContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def remove_(self):
            return self.getTypedRuleContext(gramaticLitthonParser.Remove_Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRemoveArray" ):
                return visitor.visitRemoveArray(self)
            else:
                return visitor.visitChildren(self)


    class IfLogicContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condition_(self):
            return self.getTypedRuleContext(gramaticLitthonParser.Condition_Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfLogic" ):
                return visitor.visitIfLogic(self)
            else:
                return visitor.visitChildren(self)


    class AssumeAtributtionContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assume(self):
            return self.getTypedRuleContext(gramaticLitthonParser.AssumeContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssumeAtributtion" ):
                return visitor.visitAssumeAtributtion(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def while_(self):
            return self.getTypedRuleContext(gramaticLitthonParser.While_Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class InvokePropertyContext(InstructionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.InstructionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def invoke(self):
            return self.getTypedRuleContext(gramaticLitthonParser.InvokeContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvokeProperty" ):
                return visitor.visitInvokeProperty(self)
            else:
                return visitor.visitChildren(self)



    def instruction(self):

        localctx = gramaticLitthonParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruction)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = gramaticLitthonParser.IfLogicContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.condition_()
                pass

            elif la_ == 2:
                localctx = gramaticLitthonParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.while_()
                pass

            elif la_ == 3:
                localctx = gramaticLitthonParser.SystemInConsoleContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.systemIn_()
                pass

            elif la_ == 4:
                localctx = gramaticLitthonParser.SystemOutConsoleContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.systemOut_()
                pass

            elif la_ == 5:
                localctx = gramaticLitthonParser.AssumeAtributtionContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 60
                self.assume()
                pass

            elif la_ == 6:
                localctx = gramaticLitthonParser.InvokePropertyContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 61
                self.invoke()
                pass

            elif la_ == 7:
                localctx = gramaticLitthonParser.TypeArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 62
                self.array()
                pass

            elif la_ == 8:
                localctx = gramaticLitthonParser.AddArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 63
                self.add_()
                pass

            elif la_ == 9:
                localctx = gramaticLitthonParser.RemoveArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 64
                self.remove_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticLitthonParser.RULE_expressions

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MultiplicationContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticLitthonParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(gramaticLitthonParser.ExpressionsContext,i)

        def MULTTOKEN(self):
            return self.getToken(gramaticLitthonParser.MULTTOKEN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplication" ):
                return visitor.visitMultiplication(self)
            else:
                return visitor.visitChildren(self)


    class VarContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARREGEX(self):
            return self.getToken(gramaticLitthonParser.VARREGEX, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRINGREGEX(self):
            return self.getToken(gramaticLitthonParser.STRINGREGEX, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class BlockCommandContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LBTOKEN(self):
            return self.getToken(gramaticLitthonParser.LBTOKEN, 0)
        def expressions(self):
            return self.getTypedRuleContext(gramaticLitthonParser.ExpressionsContext,0)

        def RBTOKEN(self):
            return self.getToken(gramaticLitthonParser.RBTOKEN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockCommand" ):
                return visitor.visitBlockCommand(self)
            else:
                return visitor.visitChildren(self)


    class PotenceContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticLitthonParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(gramaticLitthonParser.ExpressionsContext,i)

        def POTTOKEN(self):
            return self.getToken(gramaticLitthonParser.POTTOKEN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPotence" ):
                return visitor.visitPotence(self)
            else:
                return visitor.visitChildren(self)


    class ArrayTypeContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def array(self):
            return self.getTypedRuleContext(gramaticLitthonParser.ArrayContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)


    class FindInArrayContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def find(self):
            return self.getTypedRuleContext(gramaticLitthonParser.FindContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFindInArray" ):
                return visitor.visitFindInArray(self)
            else:
                return visitor.visitChildren(self)


    class MoreContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticLitthonParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(gramaticLitthonParser.ExpressionsContext,i)

        def PLUSTOKEN(self):
            return self.getToken(gramaticLitthonParser.PLUSTOKEN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMore" ):
                return visitor.visitMore(self)
            else:
                return visitor.visitChildren(self)


    class SubtractionContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticLitthonParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(gramaticLitthonParser.ExpressionsContext,i)

        def LESSTOKEN(self):
            return self.getToken(gramaticLitthonParser.LESSTOKEN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubtraction" ):
                return visitor.visitSubtraction(self)
            else:
                return visitor.visitChildren(self)


    class NumberContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBERSREGEX(self):
            return self.getToken(gramaticLitthonParser.NUMBERSREGEX, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)


    class SizeValueContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def sizing(self):
            return self.getTypedRuleContext(gramaticLitthonParser.SizingContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSizeValue" ):
                return visitor.visitSizeValue(self)
            else:
                return visitor.visitChildren(self)


    class DivisionContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticLitthonParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(gramaticLitthonParser.ExpressionsContext,i)

        def DIVISIONTOKEN(self):
            return self.getToken(gramaticLitthonParser.DIVISIONTOKEN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivision" ):
                return visitor.visitDivision(self)
            else:
                return visitor.visitChildren(self)


    class CompareContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticLitthonParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(gramaticLitthonParser.ExpressionsContext,i)

        def COMPARETOKEN(self):
            return self.getToken(gramaticLitthonParser.COMPARETOKEN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompare" ):
                return visitor.visitCompare(self)
            else:
                return visitor.visitChildren(self)


    class BooleanContext(ExpressionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticLitthonParser.ExpressionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLTOKEN(self):
            return self.getToken(gramaticLitthonParser.BOOLTOKEN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean" ):
                return visitor.visitBoolean(self)
            else:
                return visitor.visitChildren(self)



    def expressions(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = gramaticLitthonParser.ExpressionsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expressions, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = gramaticLitthonParser.VarContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 68
                self.match(gramaticLitthonParser.VARREGEX)
                pass

            elif la_ == 2:
                localctx = gramaticLitthonParser.BooleanContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 69
                self.match(gramaticLitthonParser.BOOLTOKEN)
                pass

            elif la_ == 3:
                localctx = gramaticLitthonParser.NumberContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 70
                self.match(gramaticLitthonParser.NUMBERSREGEX)
                pass

            elif la_ == 4:
                localctx = gramaticLitthonParser.StringContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.match(gramaticLitthonParser.STRINGREGEX)
                pass

            elif la_ == 5:
                localctx = gramaticLitthonParser.ArrayTypeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.array()
                pass

            elif la_ == 6:
                localctx = gramaticLitthonParser.SizeValueContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 73
                self.sizing()
                pass

            elif la_ == 7:
                localctx = gramaticLitthonParser.FindInArrayContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 74
                self.find()
                pass

            elif la_ == 8:
                localctx = gramaticLitthonParser.BlockCommandContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 75
                self.match(gramaticLitthonParser.LBTOKEN)
                self.state = 76
                self.expressions(0)
                self.state = 77
                self.match(gramaticLitthonParser.RBTOKEN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 99
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = gramaticLitthonParser.PotenceContext(self, gramaticLitthonParser.ExpressionsContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressions)
                        self.state = 81
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 82
                        self.match(gramaticLitthonParser.POTTOKEN)
                        self.state = 83
                        self.expressions(14)
                        pass

                    elif la_ == 2:
                        localctx = gramaticLitthonParser.MultiplicationContext(self, gramaticLitthonParser.ExpressionsContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressions)
                        self.state = 84
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 85
                        self.match(gramaticLitthonParser.MULTTOKEN)
                        self.state = 86
                        self.expressions(14)
                        pass

                    elif la_ == 3:
                        localctx = gramaticLitthonParser.DivisionContext(self, gramaticLitthonParser.ExpressionsContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressions)
                        self.state = 87
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 88
                        self.match(gramaticLitthonParser.DIVISIONTOKEN)
                        self.state = 89
                        self.expressions(13)
                        pass
